--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,16 +87,16 @@ p {
     margin-left: 25px;
 }
 
-/*1st Section Search Engine Optimization*/
+/*1,2 & 3 Sections of the content*/
 
-/*1st Section Header*/
-.search-engine-optimization h2 {
+/*1,2 & 3 Sections Header*/
+.search-engine-optimization h2,.online-reputation-management h2, .social-media-marketing h2  {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/*1st Section Info*/
-.search-engine-optimization {
+/*1,2 & 3 Sections Info*/
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -105,61 +105,13 @@ p {
     color: #ffffff;
 }
 
-/*1st Section IMG*/
-.search-engine-optimization img {
+/*1,2 & 3 Sections IMG*/
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
 
-/*2nd Section Online Reputation Management*/
-
-/*2nd Section Header*/
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/*2nd Section Info*/
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/*2nd Section IMG*/
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-
-/*3rd Section Social Media Marketing*/
-
-/*3rd Section Header*/
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/*3rd Section Info*/
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/*3rd Section IMG*/
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-
-/*ASIDE container with 3 sections*/
+/*ASIDE container with 3 sections of benefits*/
 
 /*Aside main container*/
 .benefits {
@@ -173,66 +125,23 @@ p {
     background-color: #2589bd;
 }
 
+/*Aside 1,2,3 sections of benefits*/
 
-/*Aside 1st section Lead Generation*/
-
-/*Aside 1st sedction header*/
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-    font-size: 20px;
-}
-/*Aside 1st section info*/
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-/*Aside 1st section Image*/
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-
-/*Aside 2nd section Brand Awareness*/
-
-/*Aside 2nd sedction header*/
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-    font-size: 20px;
-}
-/*Aside 2nd section info*/
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-/*Aside 2nd section Image*/
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-
-/*Aside 3rd section Cost Management*/
-
-/*Aside 3rd section info*/
-.benefit-cost h3 {
+/*Aside 1,2,3 sections header*/
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
     font-size: 20px;
 }
 
-/*Aside 3rd sedction header*/
-.benefit-cost {
+/*Aside 1,2,3 sections info*/
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-/*Aside 3rd section Image*/
-.benefit-cost img {
+/*Aside 1,2,3 sections Image*/
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -242,12 +151,12 @@ p {
 /*Footer Section*/
 
 /*Footer Header*/
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
 
 /*Footer font style*/
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
