--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,20 +128,20 @@ p {
 /*Aside 1,2,3 sections of benefits*/
 
 /*Aside 1,2,3 sections header*/
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
     font-size: 20px;
 }
 
 /*Aside 1,2,3 sections info*/
-.benefit-lead, .benefit-brand, .benefit-cost {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
 /*Aside 1,2,3 sections Image*/
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
